[gd_scene load_steps=22 format=3 uid="uid://otfiumoo8a3"]

[ext_resource type="Script" uid="uid://bl0yshsakvqhx" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://dsfrexlbjjxuh" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://cv7w0sy3lp046" path="res://mob.tscn" id="2_h2yge"]
[ext_resource type="FontFile" uid="uid://2un2qhpjg4mk" path="res://fonts/paaymaay_regular.ttf" id="4_lquwl"]
[ext_resource type="Script" uid="uid://cbjl38nm3tb67" path="res://score_label.gd" id="5_7mycd"]
[ext_resource type="PackedScene" uid="uid://bmdrx744nkcb1" path="res://art/Trash Dove.glb" id="6_7mycd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_e6lj2"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h2yge"]
albedo_color = Color(0, 1, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_c7s6e"]
material = SubResource("StandardMaterial3D_h2yge")
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0xm2m"]
albedo_color = Color(0.596078, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_h2yge"]
material = SubResource("StandardMaterial3D_0xm2m")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1bvp3"]
albedo_color = Color(0.596078, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_lquwl"]
material = SubResource("StandardMaterial3D_1bvp3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7mycd"]
albedo_color = Color(0.596078, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_272bh"]
material = SubResource("StandardMaterial3D_7mycd")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5vw27"]
albedo_color = Color(0.596078, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_kek77"]
material = SubResource("StandardMaterial3D_5vw27")

[sub_resource type="Curve3D" id="Curve3D_4c57u"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -16.9053, 0.00915527, -17.1807, 0, 0, 0, 0, 0, 0, -17, 1, 17, 0, 0, 0, 0, 0, 0, 17, 1, 17, 0, 0, 0, 0, 0, 0, 17, 1, -17, 0, 0, 0, 0, 0, 0, -18, 1, -17),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_272bh"]
default_font = ExtResource("4_lquwl")
default_font_size = 22

[sub_resource type="Theme" id="Theme_lquwl"]
default_font = ExtResource("4_lquwl")
default_font_size = 56

[sub_resource type="LabelSettings" id="LabelSettings_7mycd"]
font = ExtResource("4_lquwl")
font_size = 32

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
mob_scene = ExtResource("2_h2yge")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_e6lj2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_c7s6e")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 40, 43)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]
transform = Transform3D(5, 0, -8.9407e-07, 0, 5, 0, 8.9407e-07, 0, 5, 0, 0, 0)

[node name="Marker3D" type="Marker3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Marker3D"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 32, 27)

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 0, -17)
visible = false
mesh = SubResource("CylinderMesh_h2yge")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, -17)
visible = false
mesh = SubResource("CylinderMesh_lquwl")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 0, 17)
visible = false
mesh = SubResource("CylinderMesh_272bh")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, 17)
visible = false
mesh = SubResource("CylinderMesh_kek77")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_4c57u")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.999996, 8.02802e-05, 0.00276941, -1.45519e-11, 0.999577, -0.0289761, -0.00277057, -0.028976, -0.999576, -16.9053, 0.00915527, -17.1807)

[node name="mob_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 36.0
offset_top = 25.0
offset_right = 93.0
offset_bottom = 48.0
theme = SubResource("Theme_272bh")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_lquwl")
text = "Score:0"
script = ExtResource("5_7mycd")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 0
offset_right = 720.0
offset_bottom = 540.0
color = Color(0, 0, 0, 0.380392)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -20.0
offset_right = 77.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_lquwl")
text = "You Died"

[node name="Name" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 398.0
offset_top = 11.0
offset_right = 707.0
offset_bottom = 35.0
text = "663380260-7 นายชลวิชญ์  ลิลาศ"
label_settings = SubResource("LabelSettings_7mycd")

[node name="Trash Dove" parent="." instance=ExtResource("6_7mycd")]
transform = Transform3D(-10.6066, 0, -10.6066, 0, 15, 0, 10.6066, 0, -10.6066, -17, 6, 17)

[node name="Trash Dove2" parent="." instance=ExtResource("6_7mycd")]
transform = Transform3D(-12.9904, 0, 7.5, 0, 15, 0, -7.5, 0, -12.9904, -17, 6, -17)

[node name="Trash Dove3" parent="." instance=ExtResource("6_7mycd")]
transform = Transform3D(7.5, 0, 12.9904, 0, 15, 0, -12.9904, 0, 7.5, 16, 6, -17)

[node name="Trash Dove4" parent="." instance=ExtResource("6_7mycd")]
transform = Transform3D(12.9904, 0, -7.5, 0, 15, 0, 7.5, 0, 12.9904, 17, 6, 17)

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="mob_timer" to="." method="_on_mob_timer_timeout"]
